# daniel-lightrag-mcp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DELETE_DOCUMENT_ENHANCEMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.example.yml  pyproject.toml  功能实现完成报告.md
.claude/: settings.local.json
docs/: HTTP_SERVER_GUIDE.md  LIGHTRAG_API.json  LIGHTRAG_API_REFERENCE.md  MULTIPLE_INSTANCES_GUIDE.md  TOOL_PREFIX_QUICK_REFERENCE.md  docker-example.md
examples/: http_client_javascript.js  http_client_python.py  mcp_config_example.json  multiple_instances.py  quick_start_multiple.py  test_prefix_demo.py  unified_cli_usage.sh
src/daniel_lightrag_mcp/: __main__.py  cli.py  client.py  http_cli.py  http_server.py  models.py  server.py
tests/: conftest.py  test_client.py  test_http_server.py  test_models.py  test_server.py  test_tool_prefix.py
